2012-11-12  Dirk Eddelbuettel  <edd@debian.org>

	* inst/announce/ANNOUNCE-0.10.0.txt: Announcement draft

2012-11-12  JJ Allaire <jj@rstudio.org>

	* inst/doc/Rcpp-attributes/*: New vignette

2012-11-12  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/vector/Vector.h : adding const_iterator and associated
	begin() and end() methods
        * include/Rcpp/vector/Matrix.h : idem

2012-11-11  JJ Allaire <jj@rstudio.org>

        * src/Attributes.cpp: fully qualify _ in generated code

2012-11-11  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/iostream/Rstreambuf.h: implementing sync() so that
        flush works
        * src/Rstreambuf.cpp: implementation
        * src/Rostream.cpp : added Rcerr that forwards to REprintf

2012-11-10  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: ensure function definitions are never stale
        * src/Attributes.cpp: add optional hook for inclusion of package types
        * examples/Attributes/Export.cpp: example use of Rcpp::export
        * examples/Attributes/Depends.cpp: example use of Rcpp::depends
        * examples/Attributes/sourceCpp.R: example use of sourceCpp()
        * examples/Attributes/cppFunction.R: example use of cppFunction()

2012-11-09  Romain Francois <romain@r-enthusiasts.com>

        * R/Attributes.R: Passing verbose from evalCpp to cppFunction
        * include/RcppCommon.h: include <limits> instead of <limits.h>
        * include/Rcpp/vector/CharacterVectorExtractionIterator.h: iterator
	class to quickly iterate over the content of a CharacterVector. The
	content that is iterated over is to be considered read-only.

2012-11-08  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: special sourceCpp handling for file within the src
        directory of a package; use .h as suffix for generated headers
        * src/Attributes.cpp: add information on arguments to Rcpp module;
        use inline rather than static linkage for generated C++ shims;